// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="RadioButtonLabel-ozr645-0 ufglA"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="RadioButtonHiddenInput-sc-17huvt0-0 dnRowy"
        id="age1"
        name="age"
        type="radio"
      />
      <figure
        className="RadioButtonStyledInput-sc-1xbgszd-0 epEbBy"
      />
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 kDcImA"
      >
        0 - 30
      </span>
    </label>
  </div>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="RadioButtonLabel-ozr645-0 ufglA"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="RadioButtonHiddenInput-sc-17huvt0-0 dnRowy"
        id="age2"
        name="age"
        type="radio"
      />
      <figure
        className="RadioButtonStyledInput-sc-1xbgszd-0 epEbBy"
      />
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 kDcImA"
      >
        31 - 60
      </span>
    </label>
  </div>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="RadioButtonLabel-ozr645-0 ufglA"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="RadioButtonHiddenInput-sc-17huvt0-0 dnRowy"
        id="age3"
        name="age"
        type="radio"
      />
      <figure
        className="RadioButtonStyledInput-sc-1xbgszd-0 epEbBy"
      />
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 kDcImA"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="RadioButtonLabel-ozr645-0 ufglA"
>
  <input
    checked={true}
    className="RadioButtonHiddenInput-sc-17huvt0-0 dnRowy"
    readOnly={true}
    type="radio"
  />
  <figure
    className="RadioButtonStyledInput-sc-1xbgszd-0 epEbBy"
  />
  <span
    className="RadioButtonCaption-sc-1dv62p7-0 kDcImA"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="RadioButtonLabel-ozr645-0 ufglA"
>
  <input
    className="RadioButtonHiddenInput-sc-17huvt0-0 dnRowy"
    disabled={true}
    type="radio"
  />
  <figure
    className="RadioButtonStyledInput-sc-1xbgszd-0 epEbBy"
  />
  <span
    className="RadioButtonCaption-sc-1dv62p7-0 kDcImA"
  >
    Disabled radio button
  </span>
</label>
`;
